complete front end for login and sign up

--- a/frontend/src/app/login/logincomp/logincomp.component.html
+++ b/frontend/src/app/login/logincomp/logincomp.component.html
@@ -22,6 +22,7 @@
   <button class="form-group" type="submit" [disabled]="loading">Login </button>
   <div *ngIf="loginForm.controls.username.touched || loginForm.controls.password.touched"></div> 
   
+  <button routerLink='signup'>signup</button>
                   <button routerLink='grad'>Login as Grad</button>
                   <button routerLink='admin'>Admin</button>
 
