--- a/DemandDetailsFrontend/src/app/demand/demanddetails/demanddetails.component.html
+++ b/DemandDetailsFrontend/src/app/demand/demanddetails/demanddetails.component.html
@@ -2,7 +2,9 @@
   <div class="col-sm-1"></div>
   <div class="col-sm-10">
     <div *ngFor="let item of formattedData | keyvalue">
-      <button class="ed-btn" (click)="toggle(item.key)">{{item.key | uppercase}}</button>
+      <button class="ed-btn" (click)="toggle(item.key)">{{item.key | uppercase}}
+        <span>TOTAL DEMAND:{{getTotalDemands(item.value)}}</span>
+      </button>
       <div *ngIf="isViewableArray[item.key]">
           <table class="table">
               <thead class="table-heading" >
@@ -19,8 +21,8 @@
                     <td>{{demand.demand_count}}</td>
                     <td>{{demand.location}}</td>
                     <td>{{demand.start_time}}</td>
+                    <td>{{demand.status}}</td>
                     <td>{{demand.comments}}</td>
-                    <td></td>
                   </tr>
               </tbody>
               <tfoot>
