--- a/frontend/src/app/login/sign-up/sign-up.component.html
+++ b/frontend/src/app/login/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<h1 style="margin-left: 400px; margin-top: 40px">Sign Up Form</h1>
+<h1 style="margin-left: 400px; margin-top: 40px">Sign Up hello Form</h1>
 <form [formGroup]="signUpForm">
 
 
