--- a/frontend/src/app/login/homepage/homepage.component.html
+++ b/frontend/src/app/login/homepage/homepage.component.html
@@ -1,4 +1,5 @@
 
+<router-outlet></router-outlet>
 <div class="card text-center">
     <div class="card-header" >
       <ul  class="nav nav-tabs card-header-tabs">
@@ -15,9 +16,11 @@
           <li class="nav-item">
             <a class="nav-link" *ngIf="admin || trainer || grad"  routerLink="" routerLinkActive="active" >Ed</a>
           </li>
+          <li class="nav-item">
+              <a class="nav-link" *ngIf="admin "  routerLink="/employeeData" routerLinkActive="active" > Employee</a>
+            </li>
       </ul>
     </div>
-    {{role}}
   </div>  
 
 
