--- a/frontend/src/app/login/user-data/user-data.component.html
+++ b/frontend/src/app/login/user-data/user-data.component.html
@@ -1,3 +1,5 @@
+<html>
+  <body >
 <app-homepage></app-homepage>
       <form [formGroup]="userForm"  (submit)="addUserPost()">
         <div class="form-group">
@@ -55,3 +57,5 @@
       </tbody>
     </table>
   </div>
+  </body>
+  </html>
