--- a/frontend/src/app/login/logincomp/logincomp.component.html
+++ b/frontend/src/app/login/logincomp/logincomp.component.html
@@ -1,28 +1,29 @@
-<div class="wrapper">
-  <h2 style="margin-left: 400px; margin-top: 40px; background-color:lightblue;margin-right: 450px;">Login</h2>
-</div>
+
+<div class = "bg" >
+
+
+  <h2  style="margin-left: 400px; margin-top: 80px; ;margin-right: 450px;"><font  size = "10" face = "Time New Roman "color="white">Login</font></h2>
+
 <form [formGroup]="loginForm" (submit)="loginUser()">
   <div *ngIf="!correctDetails && submitted">Invalid Login credentails</div>
   <div class="form-group">
     <!-- <input type="text" formControlName="username"  placeholder="username" id="username">
     <div *ngIf="loginForm.controls.username.touched && !loginForm.controls.username.valid" class="alert alert-danger">username reqd</div> -->
-    <label for="username" style="margin-left: 400px">Username:</label>
+    <label for="username" style="margin-left: 400px"><font  face = "Times New Roman" size="7" color="white"><i>Username:</i></font></label>
     <input  type="text" style="margin-left: 415px; width: 400px" class="form-control" formControlName="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
     <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
         <div *ngIf="f.username.errors.required">Username is required</div>
     </div>    
   </div>
 
-  <div class="" >
     <div class="form-group" >
     <!-- <input type="password" formControlName="password" placeholder="password" id="password">
     <div *ngIf="loginForm.controls.password.touched && !loginForm.controls.password.valid" class="alert alert-danger">password reqd</div> -->
-    <label for="password" style="margin-left: 400px">Password:</label>
+    <label for="password" style="margin-left: 400px"><font  face = "Times New Roman" size="7" color="white"><i>Password:</i></font></label>
     <input type="password" style="margin-left: 415px; width: 400px" formControlName="password"  class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
     <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
         <div *ngIf="f.password.errors.required">Password is required</div>
     </div>
-  </div>
   </div>
 
   <button class="btn btn-lg btn-primary btn-block" style="margin-left: 415px; width: 400px" type="submit" [disabled]="loading">Login </button>
@@ -32,3 +33,5 @@
   
 
 </form>
+
+</div>
