--- a/frontend/src/app/login/sign-up/sign-up.component.html
+++ b/frontend/src/app/login/sign-up/sign-up.component.html
@@ -1,4 +1,6 @@
-<h1 style="margin-left: 400px; margin-top: 40px">Sign Up hello Form</h1>
+<html>
+        <body >
+                <h2  style="margin-left: 400px; margin-top: 40px; ;margin-right: 450px;"><font  size = "10" face = "Time New Roman "color="white">Sign Up</font></h2>
 <form [formGroup]="signUpForm">
 
     
@@ -141,4 +143,5 @@
 
 
 </form> 
-
+</body>
+</html>
