--- a/frontend/src/app/login/sign-up/sign-up.component.html
+++ b/frontend/src/app/login/sign-up/sign-up.component.html
@@ -110,7 +110,7 @@
     </div>
     <br>
 
-    <label style="margin-left: 400px"><b>Role:</b></label>
+    <!-- <label style="margin-left: 400px"><b>Role:</b></label>
     <select style="width: 400px; margin-left: 400px" name="role" formControlName="role" class="form-control" >
         <option value="" selected disabled hidden>Choose here</option>
         <option value="grad">grad</option>
@@ -119,7 +119,7 @@
     <div *ngIf="signUpForm.controls.role.errors" class="invalid-feedback" style="margin-left: 400px">
         Select a valid role
     </div>
-    <br>
+    <br> -->
 
 
 
